--- a/myApp/package.json
+++ b/myApp/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "1.1.4",
+    "@ionic/cli-plugin-cordova": "1.0.0",
     "typescript": "2.0.9"
   },
   "cordovaPlugins": [
